[package]
name = "rlox"
version = "0.1.0"
authors = ["TBD"]
edition = "2018"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.20"
strum_macros = "0.20"
itertools = "0.9.0"
